Work in progress.
LLVM-specific impl of gofrontend sha1 interface.

For this version I can compile and link llvm-goparse, however
much of the method set of class Llvm_backend is stubbed out. Next
step will be creating unit tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,40 +1,22 @@
 
 include(ExternalProject)
 include(ProcessorCount)
+include(LLVMExternalProjectUtils)
 
-add_llvm_library(LLVMCppGoFrontEnd
-gofrontend/go/ast-dump.cc
-gofrontend/go/escape.cc
-gofrontend/go/export.cc
-gofrontend/go/expressions.cc
-gofrontend/go/go.cc
-gofrontend/go/gogo.cc
-gofrontend/go/go-optimize.cc
-gofrontend/go/import-archive.cc
-gofrontend/go/import.cc
-gofrontend/go/lex.cc
-gofrontend/go/parse.cc
-gofrontend/go/runtime.cc
-gofrontend/go/statements.cc
-gofrontend/go/types.cc
-gofrontend/go/unsafe.cc
-go-sha1.cpp
+add_subdirectory(llvm-gofrontend)
 
-DEPENDS gmp
-  )
-
-include_directories(${CMAKE_BINARY_DIR}/external/gmp)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/gofrontend/go)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/llvm-gofrontend)
 
 processorcount(PROCESSOR_COUNT)
 
-# Removed from below:
-# DEPENDS clang
+#externalproject_add(libgmp
+# URL ftp://ftp.gnu.org/gnu/gmp/gmp-6.1.0.tar.bz2
+# URL ftp://gcc.gnu.org/pub/gcc/infrastructure/mpfr-3.1.4.tar.bz2
 
-externalproject_add(gmp
-  URL ftp://ftp.gnu.org/gnu/gmp/gmp-6.1.0.tar.bz2
-  DOWNLOAD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external
+externalproject_add(libgmp
   SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external/gmp
+  DOWNLOAD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external
   BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/external/gmp
   CONFIGURE_COMMAND <SOURCE_DIR>/configure "CC=${CMAKE_BINARY_DIR}/bin/clang"
   BUILD_COMMAND make -j${PROCESSOR_COUNT}
@@ -42,3 +24,37 @@ externalproject_add(gmp
   LOG_CONFIGURE 1
   LOG_BUILD 1
   )
+
+externalproject_add(libmpfr
+  DEPENDS libgmp
+  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external/mpfr
+  DOWNLOAD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external
+  BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/external/mpfr
+  CONFIGURE_COMMAND <SOURCE_DIR>/configure "CC=${CMAKE_BINARY_DIR}/bin/clang"
+  BUILD_COMMAND make -j${PROCESSOR_COUNT}
+  INSTALL_COMMAND ""
+  LOG_CONFIGURE 1
+  LOG_BUILD 1
+  )
+
+# LLVMCppGoFrontEnd
+
+set(LLVM_LINK_COMPONENTS
+  CppGoFrontEnd
+  CodeGen
+  Core
+  IRReader
+  MC
+  Support
+  Target
+  Object
+  Support
+  )
+
+add_llvm_tool(llvm-goparse
+  llvm-goparse.cpp
+  )
+
+target_link_libraries(llvm-goparse libmpc.a libmpfr.a libgmp.a)
+
+
