Very early first cut.
For this version I can compile and link llvm-goparse, however
much of the method set of class Llvm_backend is stubbed out. Next
step will be creating unit tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,6 @@ add_llvm_tool(llvm-goparse
   llvm-goparse.cpp
   )
 
-target_link_libraries(llvm-goparse libmpfr.a libmpc.a libgmp.a)
+target_link_libraries(llvm-goparse libmpc.a libmpfr.a libgmp.a)
 
 
