--- a/llvm-gofrontend/CMakeLists.txt
+++ b/llvm-gofrontend/CMakeLists.txt
@@ -4,10 +4,11 @@ gofrontend/go/ast-dump.cc
 gofrontend/go/escape.cc
 gofrontend/go/export.cc
 gofrontend/go/expressions.cc
+gofrontend/go/go-diagnostics.cc
+gofrontend/go/go-dump.cc
+gofrontend/go/go-optimize.cc
 gofrontend/go/go.cc
 gofrontend/go/gogo.cc
-gofrontend/go/go-optimize.cc
-gofrontend/go/go-diagnostics.cc
 gofrontend/go/import-archive.cc
 gofrontend/go/import.cc
 gofrontend/go/lex.cc
@@ -16,12 +17,12 @@ gofrontend/go/runtime.cc
 gofrontend/go/statements.cc
 gofrontend/go/types.cc
 gofrontend/go/unsafe.cc
-go-location.cpp
-go-linemap.cpp
 go-backend.cpp
+go-linemap.cpp
 go-llvm-diagnostics.cpp
-go-sha1.cpp
 go-llvm.cpp
+go-location.cpp
+go-sha1.cpp
   )
 
 include_directories(${CMAKE_BINARY_DIR}/external/gmp)
