Improved cmake support.
With this set of changes llvm-goparse is actually being
linked against the correct freshly built GMP/MPC/MPFR libs.
More work still needed, however.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,33 +1,41 @@
 
+
+# Notes:
+#
+# The code in gofrontend depends on functions from GMP, MPC, and MPFR; these libraries are currently handled via the cmake "ExternalProject" utility
+# 
+
 include(ExternalProject)
 include(ProcessorCount)
 include(LLVMExternalProjectUtils)
 
+# Subdir for gofrontend itself and for the middle layer that translates
+# Backend method calls into LLVM IR.
 add_subdirectory(llvm-gofrontend)
-add_subdirectory(unittests)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/gofrontend/go)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/llvm-gofrontend)
+# Subdir for unit tests that test the go middle layer
+add_subdirectory(unittests)
 
 processorcount(PROCESSOR_COUNT)
 
 #externalproject_add(libgmp
 # URL ftp://ftp.gnu.org/gnu/gmp/gmp-6.1.0.tar.bz2
 # URL ftp://gcc.gnu.org/pub/gcc/infrastructure/mpfr-3.1.4.tar.bz2
+# URL ftp://gcc.gnu.org/pub/gcc/infrastructure/mpc-1.0.3.tar.gz
 
-externalproject_add(libgmp
-  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external/gmp
+externalproject_add(libmpc
+  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external/mpc
   DOWNLOAD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external
-  BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/external/gmp
+  BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/external/mpc
   CONFIGURE_COMMAND <SOURCE_DIR>/configure "CC=${CMAKE_BINARY_DIR}/bin/clang"
   BUILD_COMMAND make -j${PROCESSOR_COUNT}
   INSTALL_COMMAND ""
   LOG_CONFIGURE 1
   LOG_BUILD 1
   )
+set(MPCLIBDIR ${CMAKE_CURRENT_BINARY_DIR}/external/mpc/src/.libs)
 
 externalproject_add(libmpfr
-  DEPENDS libgmp
   SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external/mpfr
   DOWNLOAD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external
   BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/external/mpfr
@@ -37,8 +45,22 @@ externalproject_add(libmpfr
   LOG_CONFIGURE 1
   LOG_BUILD 1
   )
+set(MPFRLIBDIR ${CMAKE_CURRENT_BINARY_DIR}/external/mpfr/src/.libs)
 
-# LLVMCppGoFrontEnd
+externalproject_add(libgmp
+  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external/gmp
+  DOWNLOAD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external
+  BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/external/gmp
+  CONFIGURE_COMMAND <SOURCE_DIR>/configure --prefix=${CMAKE_CURRENT_BINARY_DIR}/external/build-gmp "CC=${CMAKE_BINARY_DIR}/bin/clang"
+  BUILD_COMMAND make -j${PROCESSOR_COUNT}
+  INSTALL_COMMAND make install
+  LOG_CONFIGURE 1
+  LOG_BUILD 1
+  LOG_INSTALL 1
+  )
+set(GMPLIBDIR ${CMAKE_CURRENT_BINARY_DIR}/external/build-gmp/lib)
+
+# Things we need to link into llvm-goparse
 
 set(LLVM_LINK_COMPONENTS
   ${LLVM_TARGETS_TO_BUILD}
@@ -53,9 +75,24 @@ set(LLVM_LINK_COMPONENTS
   Support
   )
 
+# Include directories needed by llvm-goparse
+
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/gofrontend/go)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/llvm-gofrontend)
+
+# The llvm-goparse executable itself
+
 add_llvm_tool(llvm-goparse
   llvm-goparse.cpp
   )
 
-target_link_libraries(llvm-goparse libmpc.a libmpfr.a libgmp.a)
+# Record the fact that llvm-goparse depends on these libs
+
+add_dependencies(llvm-goparse libmpfr libmpc libgmp)
+
+# Add in the archives for the llvm-goparse dependencies
+# FIXME: this is a hacky way of doing this; it would be better
+# to 
+
+target_link_libraries(llvm-goparse ${MPCLIBDIR}/libmpc.a ${MPFRLIBDIR}/libmpfr.a ${GMPLIBDIR}/libgmp.a)
 
