--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,49 +16,56 @@ add_subdirectory(llvm-gofrontend)
 # Subdir for unit tests that test the go middle layer
 add_subdirectory(unittests)
 
+# So that we can issue "make -jN" cmds in externalproject_add 
 processorcount(PROCESSOR_COUNT)
 
-#externalproject_add(libgmp
+# FIXME: add in URL args for the projects below.
 # URL ftp://ftp.gnu.org/gnu/gmp/gmp-6.1.0.tar.bz2
 # URL ftp://gcc.gnu.org/pub/gcc/infrastructure/mpfr-3.1.4.tar.bz2
 # URL ftp://gcc.gnu.org/pub/gcc/infrastructure/mpc-1.0.3.tar.gz
 
+# Open issue: should the configure cmds below be run with 
+# "CC=${CMAKE_BINARY_DIR}/bin/clang"
+
+set(MPCINSTALL ${CMAKE_CURRENT_BINARY_DIR}/external/build-mpc)
 externalproject_add(libmpc
   SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external/mpc
   DOWNLOAD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external
   BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/external/mpc
-  CONFIGURE_COMMAND <SOURCE_DIR>/configure "CC=${CMAKE_BINARY_DIR}/bin/clang"
+  CONFIGURE_COMMAND <SOURCE_DIR>/configure --prefix=${MPCINSTALL} 
   BUILD_COMMAND make -j${PROCESSOR_COUNT}
-  INSTALL_COMMAND ""
-  LOG_CONFIGURE 1
-  LOG_BUILD 1
-  )
-set(MPCLIBDIR ${CMAKE_CURRENT_BINARY_DIR}/external/mpc/src/.libs)
-
-externalproject_add(libmpfr
-  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external/mpfr
-  DOWNLOAD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external
-  BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/external/mpfr
-  CONFIGURE_COMMAND <SOURCE_DIR>/configure "CC=${CMAKE_BINARY_DIR}/bin/clang"
-  BUILD_COMMAND make -j${PROCESSOR_COUNT}
-  INSTALL_COMMAND ""
-  LOG_CONFIGURE 1
-  LOG_BUILD 1
-  )
-set(MPFRLIBDIR ${CMAKE_CURRENT_BINARY_DIR}/external/mpfr/src/.libs)
-
-externalproject_add(libgmp
-  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external/gmp
-  DOWNLOAD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external
-  BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/external/gmp
-  CONFIGURE_COMMAND <SOURCE_DIR>/configure --prefix=${CMAKE_CURRENT_BINARY_DIR}/external/build-gmp "CC=${CMAKE_BINARY_DIR}/bin/clang"
-  BUILD_COMMAND make -j${PROCESSOR_COUNT}
-  INSTALL_COMMAND make install
+  INSTALL_COMMAND make -j${PROCESSOR_COUNT} install
   LOG_CONFIGURE 1
   LOG_BUILD 1
   LOG_INSTALL 1
   )
-set(GMPLIBDIR ${CMAKE_CURRENT_BINARY_DIR}/external/build-gmp/lib)
+
+set(MPFRINSTALL ${CMAKE_CURRENT_BINARY_DIR}/external/build-mpfr)
+externalproject_add(libmpfr
+  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external/mpfr
+  DOWNLOAD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external
+  BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/external/mpfr
+  CONFIGURE_COMMAND <SOURCE_DIR>/configure --prefix=${MPFRINSTALL} 
+  BUILD_COMMAND make -j${PROCESSOR_COUNT}
+  INSTALL_COMMAND make -j${PROCESSOR_COUNT} install
+  LOG_CONFIGURE 1
+  LOG_BUILD 1
+  LOG_INSTALL 1
+  )
+
+set(GMPINSTALL ${CMAKE_CURRENT_BINARY_DIR}/external/build-gmp)
+externalproject_add(libgmp
+  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external/gmp
+  DOWNLOAD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external
+  BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/external/gmp
+  CONFIGURE_COMMAND <SOURCE_DIR>/configure --prefix=${GMPINSTALL} 
+  BUILD_COMMAND make -j${PROCESSOR_COUNT}
+  INSTALL_COMMAND make -j${PROCESSOR_COUNT}
+  LOG_CONFIGURE 1
+  LOG_BUILD 1
+  LOG_INSTALL 1
+  )
+
 
 # Things we need to link into llvm-goparse
 
@@ -91,8 +98,10 @@ add_llvm_tool(llvm-goparse
 add_dependencies(llvm-goparse libmpfr libmpc libgmp)
 
 # Add in the archives for the llvm-goparse dependencies
-# FIXME: this is a hacky way of doing this; it would be better
-# to 
 
-target_link_libraries(llvm-goparse ${MPCLIBDIR}/libmpc.a ${MPFRLIBDIR}/libmpfr.a ${GMPLIBDIR}/libgmp.a)
+target_link_libraries(llvm-goparse
+  ${GMPINSTALL}/lib/libgmp.a
+  ${MPFRINSTALL}/lib/libmpfr.a
+  ${GMPINSTALL}/lib/libgmp.a
+  )
 
