Record unsigned integer types.
Keep a set of integer types that the front end has declared
as being unsigned, for later consistency checking during
expression generation.

Initial support for integer and FP constants.

Support for quad/FP128 still stubbed out at the moment. This
builds and the unit tests run cleanly.

--- a/unittests/BackendCore/CMakeLists.txt
+++ b/unittests/BackendCore/CMakeLists.txt
@@ -1,4 +1,5 @@
 
+# FIXME: this is a hack way to locate the include dirs
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../llvm-gofrontend)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../llvm-gofrontend/gofrontend/go)
 
@@ -18,10 +19,19 @@ set(LLVM_LINK_COMPONENTS
 set(BackendCoreSources
   BackendCoreTests.cpp
   BackendFcnTests.cpp
+  BackendExprTests.cpp
   )
 
 add_gobackend_unittest(GoBackendCoreTests
   ${BackendCoreSources}
   )
 
+# Record the fact that llvm-goparse depends on these libs
+add_dependencies(GoBackendCoreTests libmpfr libmpc libgmp)
 
+# Add in the archives for the llvm-goparse dependencies.
+target_link_libraries(GoBackendCoreTests
+  ${MPCINSTALL}/lib/libmpc.a
+  ${MPFRINSTALL}/lib/libmpfr.a
+  ${GMPINSTALL}/lib/libgmp.a
+  )
