Initial implementation of Bvariable class and associated methods.

--- a/unittests/BackendCore/CMakeLists.txt
+++ b/unittests/BackendCore/CMakeLists.txt
@@ -20,6 +20,7 @@ set(BackendCoreSources
   BackendCoreTests.cpp
   BackendFcnTests.cpp
   BackendExprTests.cpp
+  BackendVarTests.cpp
   )
 
 add_gobackend_unittest(GoBackendCoreTests
