Revamp linemap/location machinery.
Replace existing skeleton Llvm_linemap class with something concrete,
and redo the Location class. Original Location was a wrapper around
llvm::DebugLoc, which is not really workable in that we have to
be able to manufacture meaningful Locations during parsing, prior to
the point where we can create accurate DebugLoc's.

Hook up more of the parsing machinery to llvm-goparse; with this
commit I can now get small "hi mom" type examples through the parser.
Writing of export data still stubbed out.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,7 +87,7 @@ set(LLVM_LINK_COMPONENTS
   )
 
 # Include directories needed by llvm-goparse
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/gofrontend/go)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/llvm-gofrontend/gofrontend/go)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/llvm-gofrontend)
 
 # The llvm-goparse executable itself
