--- a/unittests/Parser/CMakeLists.txt
+++ b/unittests/Parser/CMakeLists.txt
@@ -1,13 +1,7 @@
 
-# FIXME: this is a hack way to locate the include dirs
+# FIXME: this is a hacky way to locate the include dirs
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../llvm-gofrontend)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../llvm-gofrontend/gofrontend/go)
-
-# Note:
-# - at the moment these unit tests only exercise code in Llvm_backend
-#   and related classes, so although we're linking in the gofrontend,
-#   we don't need any of the gofrontend deps (e.g. libgmp etc). If
-#   shared linkage were used, this would have to change.
 
 set(LLVM_LINK_COMPONENTS
   CppGoFrontEnd
@@ -16,16 +10,12 @@ set(LLVM_LINK_COMPONENTS
   Support
   )
 
-set(BackendCoreSources
-  BackendCoreTests.cpp
-  BackendFcnTests.cpp
-  BackendExprTests.cpp
-  BackendVarTests.cpp
-  LinemapTests.cpp
+set(ParserTestSources
+  ParserTest.cpp
   )
 
-add_gobackend_unittest(GoBackendCoreTests
-  ${BackendCoreSources}
+add_gobackend_unittest(GoParserTests
+  ${ParserTestSources}
   )
 
 include_directories(${MPCINSTALL}/include)
@@ -36,7 +26,7 @@ include_directories(${GMPINSTALL}/include)
 add_dependencies(GoBackendCoreTests libmpfr libmpc libgmp)
 
 # Add in the archives for the llvm-goparse dependencies.
-target_link_libraries(GoBackendCoreTests
+target_link_libraries(GoParserTests
   ${MPCINSTALL}/lib/libmpc.a
   ${MPFRINSTALL}/lib/libmpfr.a
   ${GMPINSTALL}/lib/libgmp.a
