Updates to Llvm_linemap.
More compact storage representation for linemap. May also want to
consider moving away from caching/lookup of locations at some point,
since it doesn't seem to buy much.

Fix a couple of memory leaks in unit test helpers.

--- a/llvm-gofrontend/CMakeLists.txt
+++ b/llvm-gofrontend/CMakeLists.txt
@@ -25,7 +25,7 @@ gofrontend/go/statements.cc
 gofrontend/go/types.cc
 gofrontend/go/unsafe.cc
 go-backend.cpp
-go-linemap.cpp
+go-llvm-linemap.cpp
 go-llvm-diagnostics.cpp
 go-llvm.cpp
 go-sha1.cpp
