Unit test cleanup. WIP, not all tests pass.

--- a/unittests/BackendCore/CMakeLists.txt
+++ b/unittests/BackendCore/CMakeLists.txt
@@ -23,6 +23,7 @@ set(BackendCoreSources
   BackendStmtTests.cpp
   BackendVarTests.cpp
   LinemapTests.cpp
+  TestUtils.cpp
   )
 
 add_gobackend_unittest(GoBackendCoreTests
