Add rudimentary tree integrity checker.
Looks for non-constant Bexpressions appearing in more than
one spot in the tree, ditto statements and instructions.

--- a/unittests/BackendCore/CMakeLists.txt
+++ b/unittests/BackendCore/CMakeLists.txt
@@ -22,7 +22,9 @@ set(BackendCoreSources
   BackendFcnTests.cpp
   BackendStmtTests.cpp
   BackendVarTests.cpp
+  BackendTreeIntegrity.cpp
   LinemapTests.cpp
+  TestUtilsTest.cpp
   TestUtils.cpp
   )
 
