Rudimentary support for Llvm_backend::call_expression.
Still many special cases to handle here; more unit tests needed.

--- a/unittests/BackendCore/CMakeLists.txt
+++ b/unittests/BackendCore/CMakeLists.txt
@@ -20,6 +20,7 @@ set(BackendCoreSources
   BackendCoreTests.cpp
   BackendExprTests.cpp
   BackendFcnTests.cpp
+  BackendCallTests.cpp
   BackendStmtTests.cpp
   BackendVarTests.cpp
   BackendTreeIntegrity.cpp
