Cleanup of function pointer handling.
Allow for some flexibility in expressions involving
function descriptors, since the types generated in LLVM for
func desc values sometimes have a function pointer field
(e.g."{ i64 (i64) }*" and sometime have a uintptr field
(e.g."{ i64 }*"). Added a new helper to resolve such conflicts.

--- a/llvm-gofrontend/CMakeLists.txt
+++ b/llvm-gofrontend/CMakeLists.txt
@@ -31,6 +31,7 @@ go-llvm-btype.cpp
 go-llvm-bexpression.cpp
 go-llvm-bstatement.cpp
 go-llvm-bfunction.cpp
+go-llvm-bvariable.cpp
 go-llvm-tree-integrity.cpp
 go-llvm.cpp
 go-sha1.cpp
