WIP, refactoring for new Bexpression/Bstatement representation.

--- a/llvm-gofrontend/CMakeLists.txt
+++ b/llvm-gofrontend/CMakeLists.txt
@@ -35,6 +35,7 @@ go-llvm-bvariable.cpp
 go-llvm-tree-integrity.cpp
 go-llvm.cpp
 go-sha1.cpp
+bnode.cpp
 )
 
 add_dependencies(LLVMCppGoFrontEnd intrinsics_gen)
