Refactor type-related code into typemanager.cpp, .h.
Move type handling code out of Llvm_backend and into
separate helper class. This is in preparation for the move
over to the new Bnode representation.

--- a/llvm-gofrontend/CMakeLists.txt
+++ b/llvm-gofrontend/CMakeLists.txt
@@ -36,6 +36,7 @@ go-llvm-tree-integrity.cpp
 go-llvm.cpp
 go-sha1.cpp
 bnode.cpp
+typemanager.cpp
 )
 
 add_dependencies(LLVMCppGoFrontEnd intrinsics_gen)
