Second phase of expression/statement refactoring.
Unit tests pass now.

--- a/llvm-gofrontend/CMakeLists.txt
+++ b/llvm-gofrontend/CMakeLists.txt
@@ -28,14 +28,15 @@ go-backend.cpp
 go-llvm-linemap.cpp
 go-llvm-diagnostics.cpp
 go-llvm-btype.cpp
+go-llvm-bnode.cpp
 go-llvm-bexpression.cpp
 go-llvm-bstatement.cpp
 go-llvm-bfunction.cpp
 go-llvm-bvariable.cpp
 go-llvm-tree-integrity.cpp
+go-llvm-genblocks.cpp
 go-llvm.cpp
 go-sha1.cpp
-bnode.cpp
 typemanager.cpp
 )
 
