Fix bug in composite init handling.
Also, split BackendExprTests.cpp into a couple of pieces.

--- a/unittests/BackendCore/CMakeLists.txt
+++ b/unittests/BackendCore/CMakeLists.txt
@@ -18,7 +18,9 @@ set(LLVM_LINK_COMPONENTS
 
 set(BackendCoreSources
   BackendCoreTests.cpp
+  BackendArrayStruct.cpp
   BackendExprTests.cpp
+  BackendPointerExprTests.cpp
   BackendFcnTests.cpp
   BackendCallTests.cpp
   BackendStmtTests.cpp
