Incorporate gofrontend change for go_write_export_data.
Also includes some fixes for SHA1 computation.

--- a/unittests/BackendCore/CMakeLists.txt
+++ b/unittests/BackendCore/CMakeLists.txt
@@ -28,6 +28,7 @@ set(BackendCoreSources
   BackendTreeIntegrity.cpp
   BackendNodeTests.cpp
   LinemapTests.cpp
+  Sha1Tests.cpp
   TestUtilsTest.cpp
   TestUtils.cpp
   )
