Revamp builtin function handling.
Delay creation of LLVM functions for builtin functions until we
get a call to look up the builtin by name; this helps reduce clutter in
the generated module. Move builtin function lookup machinery to a
separate file.

--- a/llvm-gofrontend/CMakeLists.txt
+++ b/llvm-gofrontend/CMakeLists.txt
@@ -36,6 +36,7 @@ go-llvm-genblocks.cpp
 go-llvm-linemap.cpp
 go-llvm-tree-integrity.cpp
 go-llvm-typemanager.cpp
+go-llvm-builtins.cpp
 go-llvm.cpp
 go-sha1.cpp
 )
