Debug meta data for types, first cut.
Generate debug llvm::DIType meta-data nodes for types. At this
stage only function signatures are being converted. Includes
support for circular pointer types. Next step will be DILocations.
This includes a general location cleanup for types (some info was
being lost previously).

--- a/llvm-gofrontend/CMakeLists.txt
+++ b/llvm-gofrontend/CMakeLists.txt
@@ -32,6 +32,7 @@ go-llvm-bstatement.cpp
 go-llvm-btype.cpp
 go-llvm-bvariable.cpp
 go-llvm-diagnostics.cpp
+go-llvm-dibuildhelper.cpp
 go-llvm-genblocks.cpp
 go-llvm-linemap.cpp
 go-llvm-tree-integrity.cpp
