Fix issue with duplicate debug declare ops.
Previous implementation was adding more than one declare for a
given local variable if the local was block-scoped.

--- a/unittests/BackendCore/CMakeLists.txt
+++ b/unittests/BackendCore/CMakeLists.txt
@@ -23,6 +23,7 @@ set(BackendCoreSources
   BackendPointerExprTests.cpp
   BackendFcnTests.cpp
   BackendCallTests.cpp
+  BackendDebugEmit.cpp
   BackendStmtTests.cpp
   BackendVarTests.cpp
   BackendTreeIntegrity.cpp
