Revamp construction of non-constant composite values.
Update the code that creates non-constant composite expressions from
"delayed" composite expressions to manufacture a new container Bexpression
as opposed to reusing the old container. This makes the code cleaner
and avoids the risk of introducing a spurious sharing violation.

--- a/llvm-gofrontend/CMakeLists.txt
+++ b/llvm-gofrontend/CMakeLists.txt
@@ -36,6 +36,7 @@ go-llvm-cabi-oracle.cpp
 go-llvm-diagnostics.cpp
 go-llvm-dibuildhelper.cpp
 go-llvm-genblocks.cpp
+go-llvm-irbuilders.cpp
 go-llvm-linemap.cpp
 go-llvm-tree-integrity.cpp
 go-llvm-typemanager.cpp
